--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -3,10 +3,13 @@
 * {
     --ts: 350ms ;
     --ts-fast: 100ms ;
+    --background-dark: #18222D ;
+    --border-dark: #161f29 ;
+    --background-light: #fff ;
+    --border-light: #F9FAFB ;
 }
 .nav__container {
     height: 100% ;
-    width: 25% ;
     transition: var(--ts);
     border-right-style: solid ;
     display: flex ;
@@ -16,17 +19,21 @@
 }
 
 .nav__container.dark{
-    border-right-color:  #161f29;
-    background-color: #18222D ;
+    border-right-color: var(--border-dark) ;
+    background-color: var(--background-dark) ;
 }
 
 .nav__container.light{
-    background-color: #fff;
-    border-right-color:  #F9FAFB;
+    background-color: var(--background-light) ;
+    border-right-color: var(--border-light) ;
 }
 
 .nav__container.close{
     width: 15% ;
+}
+
+.nav__container.open{
+    width: 25% ;
 }
 
 .nav__container.close .logo{
@@ -38,7 +45,7 @@
 }
 
 .nav-item {
-    height: 7% ;
+    height: 13% ;
     width: 100% ;
     padding: 10px ;
     display: flex ;
@@ -156,6 +163,10 @@ input:focus{
 
 .controls {
     margin-top: auto ;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .controls.light{
@@ -214,7 +225,7 @@ input:focus{
     display: flex ;
     flex-direction: column ;
     align-items: flex-start;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     height: 100% ;
     width: 100% ;
     overflow-y: scroll;
@@ -229,7 +240,7 @@ input:focus{
     margin-left: 7px ;
     font-family: 'Open Sans', sans-serif;
     font-weight: bold ;
-    font-size: 0.7rem ;
+    font-size: 1rem ;
 }
 
 .set-text.light {
@@ -238,4 +249,64 @@ input:focus{
 
 .set-text.dark {
     color: white ;
+}
+
+.set-text.hidden{
+    font-size: 0.6rem;
+}
+
+/* Mobile responsive design */
+
+.nav__container-mobile{
+    width: 100% ;
+    position: fixed ;
+    bottom: 0;
+    z-index : 100 ;
+    transition: var(--ts);
+
+}
+
+.nav__container-mobile.dark{
+    background-color: var(--background-dark);
+}
+
+.nav__container-mobile.light{
+    background-color: var(--background-light);
+}
+
+.nav__container-mobile.closed{
+    height: 8% ;
+}
+
+.nav__container-mobile.open{
+    height: 50% ;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.m-navitem-wrapper{
+    display :flex ;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.m-navitem-wrapper.closed{
+    height: 100% ;
+    width: 100% ;
+}
+
+.m-navitem-wrapper.open{
+    height: 8%;
+    width: 100% ;
+}
+
+.m-nav-item{
+    height: 100% ;
+    width: 10% ;
+    padding: 2px ;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
 }
